# termine-notifier

./: .env.example  .gitignore  Caddyfile  Dockerfile.web  README.md  docker-compose.yml  pyproject.toml
app/: admin.py  catalog.py  catalog_sync.py  config.py  confirmations.py  cycle.py  db.py  digest.py  filters.py  housekeeping.py  http_session.py  mail.py  models.py  planning.py  poller.py  repo.py  tokens.py  web.py
app/i18n/: de.json  en.json
app/scrapers/: __init__.py  smartcjm.py
app/templates/: _fields.html  admin.html  base.html  confirmed.html  form.html  manage.html
catalog/leipzig/: appointment_type.en.json  appointment_type.json  locations.en.json  locations.json  scraper_config.json
docs/: deployment.md
docs/plans/: 2026-05-17-termine-notifier.md
docs/specs/: 2026-05-03-leipzig-termine-notifier-design.md  2026-05-03-leipzig-termine-notifier-findings.md
scripts/: loadtest.py  smartcheck.sh
tests/: test_admin.py  test_catalog.py  test_catalog_sync.py  test_confirmations.py  test_db.py  test_delivery_quota.py  test_digest.py  test_e2e_flow.py  test_filters.py  test_housekeeping.py  test_housekeeping_catalog_sync.py  test_http_session.py  test_mail.py  test_models.py  test_planning.py  test_polling_cycle.py  test_scraper_dispatch.py  test_send_batch.py  test_smartcjm_client.py  test_smartcjm_live.py  test_smartcjm_parser.py  test_smartcjm_wsid_cache.py  test_subscribe.py  test_token_routes.py  test_tokens.py  test_web_form.py
tests/fixtures/: leipzig_no_slots.html  leipzig_session_expired.html  leipzig_with_slots.html
